--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
     "fluent-ffmpeg": "^2.1.3",
-    "next": "16.0.5",
+    "next": "^16.0.8",
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
